--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    width: 100%;
   }
   h1 {
     font-size: 2.5rem;
@@ -41,8 +42,21 @@
   }
   #weather-info{
     display: flex;
+    justify-content: center;
   }
   p{
     margin-left: 2rem;
-  }
   
+  }
+  #weather-container{
+    width: 95%;
+  }
+  #close-weather-app{
+    position: absolute;
+    top: 2%;
+    right: 1%;
+  }
+  #weather-container{
+    display: none;
+    position: relative;
+  }
